--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+body, body input {
+  font-family: "noto-sans", sans-serif;
+  font-weight: 400;
+  color: #414141;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.text-h2-title, .text-title{
+  margin: 0;
+  line-height: 125%;
+  font-family: "source-serif-pro";
+  font-weight: 700;
+  letter-spacing: -.4px;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.detailed-highlights-item {
+  display: flex;
+  align-items: flex-start;
+  padding-right: 1.25rem;
+  color: #414141;
 }
